# GeneNetwork_24L

./: README.md
Data_processing/: .Celegans_protocol.md.swp  Celegans_protocol.md  HS_rats_protocol.md  data_processing_with_R.md  filtering_genotype_file.md  genotype_smoothing.md  mikk_clean_hapVariants.ipynb  mikk_clean_wrangling.py  mikk_data_wrangling.py  vcf_to_genotype.sh
Data_processing/C_elegans/: Celegans_metadata.md  Celegans_protocol-updated.md  celegans_genotype_converter.scm
Data_processing/C_elegans/Scripts/package_beta/celegans_geno_converter/: pyproject.toml
Data_processing/C_elegans/Scripts/package_beta/celegans_geno_converter/celegans_geno_converter/: __init__.py  converter.py  main.py
Data_processing/Phewas/: Phewas_analysis.md  phewas_btbd9_combined.csv
Data_processing/Processing_vcf_files/: VCF_variants_extraction.md
Data_processing/Rqtl2/: Harm_rqtl2_bundle.py  data_processing_python.md  processing_metadata.md  processing_metadata1.md
Data_processing/error_files/: mikk_GN1038_pheno.txt
PheWAS_Project/Scripts/: Phewas-mice_testing.R  Phewas_analysis.md  Phewas_analysis_actual.R
fetche-django-blog/: db.sqlite3
fetche-django-blog/blog/: admin.py  models.py  views.py
fetche-django-blog/personal_blog/: settings.py  urls.py
software_dev_learning/: BackEnd_Dev24.ipynb  Calendar_month_program.py  Calendar_month_program_updated.py  OOP_principles.py  OOP_with_Python.md  REST-APIs-for_data_query.py
software_dev_learning/Temperature_conversion/: Celsius_to_Fahrenheit.py  Fahrenheit_to_Celsius.py  main.py  select_temp.py  welcome.py
(+75 files in other folders)
