[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "celegans_geno_converter" 
version = "0.1.0" 
description = "A command-line tool for processing genotype and marker data into  GEMMA-compatible format." 
authors = ["Felix Lisso <flisso434@gmail.com>"]
license = "MIT" 
readme = "README.md" 

[tool.poetry.dependencies]
python = "^3.8" 
pandas = "^1.5.3" 

[tool.poetry.scripts]
celegans_geno_converter = "celegans_geno_converter.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0" 



